stylesheets/styles.css
/*
Title:		Primary Content Styles
Author:		Cameron Morgan
*/

@charset "UTF-8";

body {
  margin:0px; padding:0px;
  background: none repeat scroll 0 0 #f6f6f6;
  padding: 34px 0 0;
	font-family:Arial, Helvetica, sans-serif;
	color: white;
	font-size:13px;
	line-height:19px;
}

h1 {
	font-size: 16px;
	color: #ba3226;
	line-height: 26px;
}

h2 {
	font-size: 13px;
	color: #9b9c9b;
	font-style: italic;
	line-height: 20px;
	text-decoration: underline;
}

h3 {
	font-size: 12px;
	color: #ba3226;
	font-style: italic;
}

/* Header ------------------------------------------------------ */

/* Buttons */

button.site-button, a.site-button, input[type=submit].site-button {
	padding: 3px 5px;
	background: #30939f;
	font-size: 15px;
	color: #fff;
	text-transform: uppercase;
	text-decoration: none;
	cursor: pointer;
	display: inline-block;
	text-align: center;
	line-height: 1;
}


/* Natick Buttons */

button.natick-button, a.natick-button, input[type=submit].natick-button {
	padding: 9px 18px;
	background: #30939f;
	font-size: 15px;
	color: #fff;
	text-decoration: none;
	font-family: "Raleway", Helvetica, Arial, Sans-serif;
	text-transform: uppercase;
	cursor: pointer;
	display: inline-block;
	text-align: center;
	line-height: 1;
}

button.natick-button:hover, a.natick-button:hover, input[type=submit].natick-button:hover {
	background: #ffe293;
	color: #30939f;
}

.small-caps {
	font-size: 10px;
}

.italic-underline {
	font-style: italic;
	text-decoration: underline;
	color: #fff;
}

div > p.natick-text {
	font-size: 16px;
	line-height:22px;
	font-family: "Lato", serif;
}

.caps {
	text-transform: uppercase;
}

span.bold {
	font-weight: 300;
}



/* Natick Links	*/

.natick-links a:link, a:visited {
	color: #ffe293;
}
.natick-links a:hover {
	color: #7b4b7d;
}


/* Main Styles ------------------------------------------------- */

#wrap {
	width: 100%;
}

#col1-landing {
	width:27%;
	float: left;
	background-color: #BAD784;
	background-image: url(http://natick.s3.amazonaws.com/WCvrHsQ.png);
}

#col2-landing {
	width: 73%;
	float: left;
	background-color: #EF5A5D;
	background-image: url(http://natick.s3.amazonaws.com/WCvrHsQ.png);
}

#col1-signup {
	width:27%;
	float: left;
	background-color: #FEE7AA;
	background-image: url(http://natick.s3.amazonaws.com/WCvrHsQ.png);
}

#col2-signup {
	width: 73%;
	float: left;
	background-color: #19A1B0;
	background-image: url(http://natick.s3.amazonaws.com/WCvrHsQ.png);
}

#natick-couple {
	padding: 20px;
	width: 300px;
	position: relative;
	z-index: 3;
}

#natick-logo {
	width: 110px;
	z-index: 4;
	position: absolute;
	top: 375px;
	left: 125px;
}

#media-group {
	z-index: 4;
	position: absolute;
	top: 520px;
	left: 125px;
}

#natick-fb {
	width: 15px;
}

#natick-tw {
	width: 15px;
	margin-right: 10px;
}

#natick-ggp {
	width: 60px;
}

#powered-by {
	width: 90px;
}

#natick-subtext {
	width: 275px;
	padding: 36px;
	background-color: #fff;
	color: #f15d5e;
}

#natick-subtext p {
	margin-bottom: 15px;
}


#col1 h1 {
	color: #ba3226;
}

#col1 p {
	color: #707070;
	font-size: 12px;
	line-height: 22px;
}

div#main > h1 {
	color: #ba3226;
}

div#main > p {
	color: #707070;
	font-style: italic;
}

#main p {
	color: #707070;
	font-size: 12px;
	line-height: 22px;
}

#main-terms {
	height: 6500px;
	color: #707070;
	font-size: 12px;
	line-height: 22px;
}

#main-booking {
	height: 700px;
	color: #707070;
	font-size: 12px;
	line-height: 22px;
}

#main-signup {
	height: 1150px;
	color: #707070;
	font-size: 12px;
	line-height: 22px;
}

#main-quotes {
	height: 2200px;
	color: #707070;
	font-size: 12px;
	line-height: 22px;
}

#main-blog {
	height: 2600px;
	color: #707070;
	font-size: 12px;
	line-height: 22px;
}

#main-talent-dash {
	height: 425px;
	color: #707070;
	font-size: 12px;
	line-height: 22px;
}

#box {
	text-align: center;
}

/* Secondary Styles -------------------------------------------- */


/* Footer ------------------------------------------------------ */

#logo-footer-right {
	display: block;
    float: right;
    padding-left: 10px;
    border-left: 1px solid #fff;
	}

#logo-footer-left {
	display: block;
    float: left;
    padding-right: 10px;
	}

/* Footer Navigation */

ul#footnav {
	margin:0px; padding:0px;
	float: right;
	padding-right: 15px;
}

ul#footnav li {
	display:inline;
	margin-left:12px;
}

ul#footnav li a {
	text-decoration:none;
	color:#fff;
	font-family:Verdana, Arial, Helvetica, sans-serif;
	font-size:10px;
}

ul#footnav li a.active, ul#footnav li a:hover {
	color:#9b9c9b;
	text-decoration: underline;
}


/* Natick ------------------------------------------------------ */

#natick-signup {
	background: #47a0a9 url('http://natick.s3.amazonaws.com/signup-bg.jpg') no-repeat;
	background-size: 100% auto;
}


/* Classes ------------------------------------------------------ */

hr, .hide {
	display: none;
	}

a img {
	border: none;
	}

.grid-wrap {
    margin: 20px 0;
    overflow: auto;
    width: 990px;
}

.align-right {
	float: right;
	padding-right: 15px;
}

.align-left {
	float: left;
	padding-left: 15px;
	line-height: 15px;
}

.align-center {
	text-align: center;
}

img.center {
    display: block;
    margin-left: auto;
    margin-right: auto }

img.home {
	display: block;
	float: left;
	margin-left: 50px;
}

.no-underline {
	text-decoration: none;
}

div.hr {
  height: 2px;
  background: #ba3226;
}
div.hr hr {
  display: none;
}

div.pagination {
    margin: 3px;
    padding: 3px;
}

.left-padding {
	padding-left: 10px;
}


/* Clear Floats */

.group:after {
	content: ".";
	display: block;
	height: 0;
	clear: both;
	visibility: hidden;
	}

